# Algo-trade

./: .coveragerc  .dockerignore  .env.docker  .env.example  .gitignore  .gitleaks.toml  .markdown-link-check.json  .pre-commit-config.yaml  .secrets.baseline  2-WEEK_ROADMAP.md  ACCOUNT_CONFIG.json  ALGOX_MVP_ARCHITECTURE.md  CONTRIBUTING.md  DATABASE_INTEGRATION_PLAN.md  DECISION_FLOW_DIAGRAMS.md  DEPLOYMENT.md  DOCKER_SETUP.md  Dockerfile  E2E_TEST_SUMMARY.md  EXECUTIVE_SUMMARY_HE.md  GO_LIVE_DECISION_GATE.md  IAM_POLICY_FRAMEWORK.md  IBKR_ARTIFACT_VALIDATION_REPORT.md  IBKR_INTEGRATION_FLOW.md  IBKR_INTERFACE_MAP.md  IBKR_PRELIVE_EXECUTION_SUMMARY.md  IBKR_SETUP.md  IMPLEMENTATION_SUMMARY.md  INCIDENT_PLAYBOOK.md  KAFKA_INTEGRATION.md  KNOWLEDGE_TRANSFER.md  MODULE_INVENTORY.txt  MONITORING.md  OPERATIONAL_GUIDE.md  ORDER_EXECUTION_GUIDE.md  PAPER_TRADING_LOG.json  PAPER_TRADING_METRICS.csv  PAPER_TRADING_SETUP_PLAN.md  PRELIVE_VERIFICATION_LOG.json  PRE_LIVE_CHECKLIST.md  (+38 more)
.github/workflows/: chaos-nightly.yml  ci.yml  deploy.yml  governance.yml  performance.yml  security-gates.yml  test.yml  tests-and-coverage.yml
algo_trade/core/: config.py  ensemble.py  gate_linucb.py  main.py  simulation.py  simulation_improved.txt  simulation_output.txt  targets.yaml  utils.py
algox/: __init__.py
algox/data/: __init__.py  ibkr_client.py
algox/portfolio/: __init__.py  optimizer.py  risk.py
algox/signals/: __init__.py  event_driven.py  ricci_curvature.py  structural.py
algox/strategy/: __init__.py  orchestrator.py  wfo.py
apps/strategy_loop/: __init__.py  events.py  main.py  orchestrator.py  run.py
aws/ecs/: data-plane-task.json
config/: ibkr_config.yaml  mvp_config.yaml  prometheus.yml
contracts/: README.md  bar_event.schema.json  execution_report.schema.json  market_events.schema.json  order_intent.schema.json  orders.schema.json  resilience_config.yaml  schema_validator.py  topics.yaml  validators.py
core/: __init__.py
core/signals/: __init__.py
data/: assets.csv
data_plane/adapters/: __init__.py  csv_source.py  feed_stub.py
data_plane/app/: main.py  orchestrator.py  time_service.py
data_plane/bus/: kafka_adapter.py  topic_initializer.py
data_plane/config/: audit_logger.py  kafka.yaml  kafka_optimized.yaml  performance_production.yaml  secrets_manager.py  utils.py
data_plane/monitoring/: README.md  __init__.py  alerting.py  example_usage.py  metrics_exporter.py  metrics_server.py  monitoring_config.yaml
data_plane/normalization/: normalize.py  ofi_from_quotes.py
data_plane/pacing/: pacing_manager.py
data_plane/qa/: completeness_gate.py  freshness_monitor.py  ntp_guard.py
data_plane/storage/: writer.py
data_plane/tddi/: kappa_engine.py  state_manager.py
data_plane/validation/: message_validator.py
docker/: Dockerfile.data-plane  Dockerfile.order-plane  Dockerfile.strategy-plane  README.md  docker-helper.sh
docker/entrypoint/: entrypoint.sh
docker/healthcheck/: health.py
docker/prometheus/: prometheus.yml
docs/: MONITORING.md  ORDER_EXECUTION.md  PERFORMANCE_OPTIMIZATION.md  SECRETS_MANAGEMENT.md  SECURITY.md  TESTING.md
examples/: gdt_agent_example.py  order_execution_example.py
fixtures/: __init__.py  seeds.yaml
fixtures/market_data/: sample_data.csv
infrastructure/: README.md  docker-compose.monitoring.yml
infrastructure/prometheus/: prometheus.yml
k8s/: configmap.yaml  data-plane-deployment.yaml  namespace.yaml  order-plane-deployment.yaml  strategy-plane-deployment.yaml
monitoring/: INTEGRATION_EXAMPLE.py  README.md  alertmanager.yml  prometheus.yml  start-monitoring.sh
monitoring/alertmanager/: alertmanager.yml
monitoring/prometheus/: alerts.yml  prometheus.yml
order_plane/adapters/: __init__.py  ibkr_stub.py  paper_broker.py
order_plane/app/: orchestrator.py  order_orchestrator.py
order_plane/broker/: ibkr_exec_client.py  throttling.py
order_plane/intents/: risk_checks.py
order_plane/learning/: lambda_online.py
order_plane/risk/: __init__.py  kill_switch.py  rules.py
order_plane/validation/: message_validator.py
reports/: events.jsonl  test_summary.txt
scripts/: README.md  docker-start.sh  docker-stop.sh  download_data.py  init-kafka-topics.sh  kafka_health_check.py  run_backtest.py  setup_env.sh  start-monitoring.sh  stop-monitoring.sh  validate_iam_policies.py  validate_paper_trading.py  validate_security_logs.py
scripts/sensitivity_analysis/: README.md  optuna_optimizer.py  sensitivity_analyzer.py
shared/: logging.py
shared/cli/: healthcheck.py
shared/config/: config.yaml  secrets.example.env
shared/examples/: samples.json
shared/metrics/: metrics.py
shared/models/: __init__.py  allocation.py  base.py  market.py  order.py  risk.py  signal.py
shared/security/: __init__.py  rotation.py  secrets_manager.py  tls_config.py
shared/validation/: __init__.py  schema_check.py
tests/: conftest.py  stage6_account_probe.py  stage7_latency_benchmark.py  stage7_paper_trading.py  stage8_go_live_decision.py  test_composite_signals.py  test_covariance.py  test_ibkr_exec_client.py  test_ibkr_handler.py  test_integration_e2e.py  test_kafka_adapter.py  test_metrics_exporter.py  test_order_chaos.py  test_order_flow.py  test_property_based.py  test_qp_solver.py  test_schema_validation.py  test_secrets_security.py  test_signals.py  test_simulation.py
tests/chaos/: README.md  __init__.py  conftest.py  test_component_failures.py  test_ibkr_resilience.py  test_network_chaos.py  test_recovery_scenarios.py  utils.py
tests/e2e/: __init__.py  conftest.py  ibkr_mock.py  test_ibkr_integration_e2e.py  test_kafka_e2e.py  test_kill_switches.py  test_order_lifecycle.py  test_recovery_scenarios.py  test_trading_loop.py
tests/integration/: test_e2e_dry_run.py  test_e2e_workflow.py  test_ibkr_integration.py  test_kafka_e2e.py  test_schema_roundtrip.py
tests/metamorphic/: test_mt_noise.py  test_mt_scaling.py  test_mt_tail.py  test_mt_timeshift.py
tests/performance/: locustfile.py  test_benchmarks.py  test_latency_benchmark.py
tests/property/: test_qp_properties.py
tests/unit/: test_base_signals.py  (+8 more)
(+49 files in other folders)
