# =============================================================================
# Python Project Configuration
# =============================================================================
# Configuration for Python tooling: Black, isort, Bandit, MyPy, pytest
# =============================================================================

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algo-trade"
version = "0.1.0"
description = "Advanced Algorithmic Trading System"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Algo-Trade Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

# -----------------------------------------------------------------------------
# Black - Code Formatter
# -----------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
  | \.pytest_cache
  | \.mypy_cache
)/
'''

# -----------------------------------------------------------------------------
# isort - Import Sorter
# -----------------------------------------------------------------------------
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    "*/venv/*",
    "*/.venv/*",
    "*/build/*",
    "*/dist/*",
]

# -----------------------------------------------------------------------------
# Bandit - Security Linter
# -----------------------------------------------------------------------------
[tool.bandit]
# Scan targets
targets = ["algo_trade", "data_plane", "order_plane", "apps", "contracts"]
exclude_dirs = [
    "/tests/",
    "/test/",
    "/.venv/",
    "/venv/",
    "/build/",
    "/dist/",
]

# Test IDs to skip (with justification)
skips = [
    # B101: assert_used - asserts are OK in tests
    # B601: paramiko_calls - not using paramiko
    # B602: subprocess_popen_with_shell_equals_true - validated usage
]

# Severity level
# LOW, MEDIUM, HIGH
severity = "MEDIUM"

# Confidence level
# LOW, MEDIUM, HIGH
confidence = "MEDIUM"

# Tests to run (empty means all)
tests = []

# Ignore specific files
exclude = [
    "*/tests/*",
    "*/test_*.py",
    "*_test.py",
]

# -----------------------------------------------------------------------------
# Bandit Issue-Specific Configuration
# -----------------------------------------------------------------------------

# B104: hardcoded_bind_all_interfaces
# B105: hardcoded_password_string
# B106: hardcoded_password_funcarg
# B107: hardcoded_password_default
# B108: hardcoded_tmp_directory

[tool.bandit.assert_used]
skips = ['*/test_*.py', '*_test.py']

[tool.bandit.hardcoded_tmp_directory]
tmp_dirs = ['/tmp', '/var/tmp', '/dev/shm']

# -----------------------------------------------------------------------------
# MyPy - Static Type Checker
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
ignore_missing_imports = true

# Per-module overrides
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

[[tool.mypy.overrides]]
module = "scripts.*"
disallow_untyped_defs = false

# Third-party modules without stubs
[[tool.mypy.overrides]]
module = [
    "ib_insync.*",
    "cvxpy.*",
    "kafka.*",
    "hvac.*",
]
ignore_missing_imports = true

# -----------------------------------------------------------------------------
# Pytest - Testing Framework
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output options
addopts = [
    "-ra",                          # Show summary of all test results
    "--strict-markers",             # Enforce marker registration
    "--strict-config",              # Enforce config validation
    "--showlocals",                 # Show local variables in tracebacks
    "-v",                           # Verbose output
    "--tb=short",                   # Short traceback format
    "--cov=algo_trade",             # Coverage for main package
    "--cov=data_plane",
    "--cov=order_plane",
    "--cov=contracts",
    "--cov-report=html",            # HTML coverage report
    "--cov-report=term-missing",    # Terminal report with missing lines
    "--cov-fail-under=30",          # Fail if coverage < 30%
]

# Markers
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "security: marks tests related to security",
    "ibkr: marks tests requiring IBKR connection",
    "kafka: marks tests requiring Kafka",
]

# Test discovery
norecursedirs = [
    ".git",
    ".venv",
    "venv",
    "dist",
    "build",
    "*.egg",
    "__pycache__",
]

# Timeout (prevent hanging tests)
timeout = 300
timeout_method = "thread"

# Ignore deprecation warnings from dependencies
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# -----------------------------------------------------------------------------
# Coverage.py - Code Coverage
# -----------------------------------------------------------------------------
[tool.coverage.run]
source = ["algo_trade", "data_plane", "order_plane", "contracts", "apps"]
omit = [
    "*/tests/*",
    "*_test.py",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
    "*/build/*",
    "*/dist/*",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    # Standard exclusions
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",

    # Debug-only code
    "if settings.DEBUG",

    # Abstract methods
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# -----------------------------------------------------------------------------
# Ruff - Fast Python Linter (alternative to Flake8)
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py39"

# Enable rules
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
]

# Ignore specific rules
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "S101",   # use of assert (OK in tests)
    "T201",   # print found (OK for CLI tools)
]

# Exclude files/directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

# Allow autofix for specific rules
fixable = ["I", "F", "UP"]
unfixable = []

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]  # Allow asserts and hardcoded passwords in tests
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

# -----------------------------------------------------------------------------
# Flake8 (if using flake8 instead of Ruff)
# -----------------------------------------------------------------------------
# Note: Flake8 doesn't use pyproject.toml by default, use .flake8 or setup.cfg
# This section is for reference only

# -----------------------------------------------------------------------------
# Security & Secrets Detection
# -----------------------------------------------------------------------------

# List of files/patterns that are OK to have "secrets" (templates, examples)
[tool.detect-secrets]
exclude_files = '''
    (
        \.env\.example|
        \.secrets\.baseline|
        tests/.*|
        .*\.lock
    )
'''

# -----------------------------------------------------------------------------
# Additional Tools
# -----------------------------------------------------------------------------

# Pydocstyle - Docstring style checker
[tool.pydocstyle]
convention = "google"
add-ignore = ["D100", "D104", "D107"]  # Missing docstrings (less strict)
match = "(?!test_).*\\.py"

# Safety - Dependency vulnerability checker
# (configured via .safety-policy.yml if needed)

# =============================================================================
# Development Commands Reference
# =============================================================================
#
# Format code:
#   black .
#   isort .
#
# Lint:
#   ruff check .
#   flake8 .
#   bandit -r algo_trade/
#
# Type check:
#   mypy algo_trade/
#
# Test:
#   pytest
#   pytest -v
#   pytest --cov
#
# Security:
#   bandit -r .
#   safety check
#   detect-secrets scan
#   gitleaks detect
#
# Pre-commit:
#   pre-commit run --all-files
#
# =============================================================================
